--- a/css/loginatyle.css
+++ b/css/loginatyle.css
@@ -14,6 +14,12 @@ body {
   padding: 20px;
 }
 
+h3{
+  color: white;
+  font-size: 15px;
+  padding-bottom: 20px;
+}
+
 .login-container {
   background-color: #000000;
   padding: 30px;
