--- a/css/referral.css
+++ b/css/referral.css
@@ -1,15 +1,11 @@
-ody {
+body {
   font-family: Arial, sans-serif;
-  background: #0c0c0c;
-  color: white;
+  background-color: #000;
+  color: #fff;
   display: flex;
-  height: 100vh;
-  align-items: center;
-  transition: background 0.3s ease, color 0.3s ease;
-}
-.navbar{
-  width: 100%;
-
+  align-items: center;      
+  margin: 0;
+  padding: 0;
 }
 
 body.light-mode {
@@ -17,16 +13,23 @@ body.light-mode {
   color: #111;
 }
 
-.referral-container {
-  margin-top: 50px;
-  max-width: 500px;
+
+.navbar{
   width: 100%;
-  background: #111;
-  padding: 25px;
-  border-radius: 12px;
-  box-shadow: 0 0 10px rgba(255, 238, 0, 0.3);
 }
 
+.referral-container {
+  background-color: #1a1a1a;
+  padding: 30px;
+  border-radius: 12px;
+  box-shadow: 0 0 15px rgba(255, 251, 0, 0.2);
+  width: 100%;
+  max-width: 500px;
+  transition: background 0.3s ease;
+  padding: 20px;
+  margin-top: 40px;
+  justify-content: center;
+}
 
 body.light-mode .referral-container {
   background: #fff;
